kubernetes/uservice-status-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: u-status
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: u-status
    spec:
      containers:
        - name: u-status
          imagePullPolicy: "Always"
          image: "lsstsqre/uservice-status"
          ports:
            -
              containerPort: 5000
              name: u-status
