kubernetes/uservice-status-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: u-status
  labels:
    name: u-status
spec:
  type: NodePort
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    name: u-status
